--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
     "jest-watch-typeahead": "^0.6.5"
